[package]
name = "gullery"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]

[dependencies]
gullery_bindings = {path = "./gullery_bindings"}
derive_more = "0.6"
num-traits = "0.1"
w_result = { git = "https://github.com/Osspial/w_result" }
cgmath-geometry = { git = "https://github.com/Osspial/cgmath-geometry" }

[dev-dependencies]
glutin = "0.11"
quickcheck = "0.4"
gullery_macros = { path = "./gullery_macros" }

[workspace]
members = ["./gullery_bindings", "./gullery_macros"]
