[package]
name = "gullery"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]

[dependencies]
gullery_bindings = {path = "./gullery_bindings"}
derive_more = "0.13"
num-traits = "0.2"
cgmath-geometry = { git = "https://github.com/Osspial/cgmath-geometry" }
bitflags = "1.0"

[dev-dependencies]
glutin = "0.19"
quickcheck = "0.7"
gullery_macros = { path = "./gullery_macros" }
png = "0.13"
ddsfile = "0.2"

[workspace]
members = ["./gullery_bindings", "./gullery_macros"]
