[package]
name = "gullery"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]

[dependencies]
gullery_bindings = {path = "../gullery_bindings"}
num-traits = "0.2"
bitflags = "1.0"
mint = "0.5"

[dev-dependencies]
glutin = "0.19"
quickcheck = "0.7"
gullery_macros = { path = "../gullery_macros" }
png = "0.13"
ddsfile = "0.2"
cgmath = {version = "0.17", features = ["mint"]}
